samples/_failures_safe/1761319591_c199ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fe57d16.c: In function ‘handle_event’:
./samples/SAFE/__tmp_4fe57d16.c:162:13: error: expected declaration or statement at end of input
  162 |             return process_processing_state(sm, event_data);
      |             ^~~~~~
./samples/SAFE/__tmp_4fe57d16.c:162:13: error: expected declaration or statement at end of input
